src/components/Feedback/Feedback.scss
@use 'sass:map';
@use '../../styles/mixins';
@use '../../styles/variables';

$popupWidth: 320px;

@mixin tooltip-in-center {
    // use sm to cover a larger number of smartphones
    @media screen and (max-width: map.get(variables.$screenBreakpoints, 'sm')) {
        & {
            // stylelint-disable declaration-no-important
            right: 0 !important;
            left: 0 !important;
            margin: auto;
        }
    }
}

.dc-feedback {
    &__container {
        &_view_wide {
            display: flex;
            align-items: center;
            flex-direction: column;
            width: 100%;
        }
    }

    &__container-col {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        gap: 20px;

        width: 100%;
        padding: 26px;

        border: 1px solid var(--g-color-line-generic);
        border-radius: 8px;

        &_view_wide {
            display: flex;
            align-items: center;
        }
    }

    &__success-popup {
        left: -20px;

        padding: variables.$popupPadding 50px variables.$popupPadding variables.$popupPadding;
        width: $popupWidth;

        &_view_wide {
            @include tooltip-in-center();
        }
    }

    &__variants-popup {
        padding: variables.$popupPadding;
        width: $popupWidth;
        left: -20px;

        &_view_wide {
            @include tooltip-in-center();
        }
    }

    &__popup-title {
        font-size: var(--g-text-body-2-font-size);
        line-height: var(--g-text-body-2-line-height);
        padding-bottom: 8px;
    }

    &__popup-text {
        font-size: var(--g-text-body-short-font-size);
        line-height: var(--g-text-body-short-line-height);
    }

    &__variants {
        display: flex;
        flex-direction: column;
        padding: 8px 0;
    }

    &__variant {
        margin-bottom: 8px;
        white-space: normal;
    }

    &__variant:last-of-type {
        margin-bottom: 0;
    }

    &__variants-actions {
        padding-top: 8px;
        display: flex;
        justify-content: flex-end;
    }

    &__variants-action {
        margin-left: 10px;
    }

    &__textarea {
        padding: 8px 0;
    }

    &__title {
        &_view_wide {
            @include mixins.text-size(subheader-3);
            font-weight: 400;
        }
    }

    &__controls {
        display: flex;
        gap: 20px;

        &_view_wide {
            display: flex;
            flex-wrap: wrap;
            justify-content: center;
        }
    }

    &__comment-action {
        &_view_wide {
            flex-basis: 100%;
            justify-content: center;
        }
    }

    &__control {
        &:nth-child(1),
        &:nth-child(2) {
            display: flex;
            align-items: center;

            font-size: 17px;
            line-height: 24px;
            font-weight: 400;
        }

        &_view_wide {
            margin-right: 24px;

            &:last-of-type {
                margin-right: 0;
            }
        }

        &_view_regular {
            margin-right: 4px;

            &:last-of-type {
                margin-right: 0;
            }
        }
    }
}

